save the Product and show all
