# frontend-ui/src/app/services/models/agent.ts
@@ -2,10 +2,12 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+import { Member } from '../models/member';
 export interface Agent {
   email?: string;
   id?: number;
   joinDate?: string;
+  members?: Array<Member>;
   name?: string;
   nidCard?: string;
   nominee?: string;
